[package]
name = "devil_bot_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
futures = "0.3.31"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.24.0", features = ["rustls", "rustls-tls-webpki-roots"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_yml = "0.0.12"
reqwest = { version = "0.12.8", features = ["multipart", "stream", "json", "rustls-tls"] }
rand = "0.8.5"
chrono = "0.4.38"
urlencoding = "2.1.3"
void_log = { git = "https://gitee.com/orange_union/void_log.git" }