[package]
name = "devil_bot_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.1", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.24.0", features = ["rustls"] }
axum = { version = "0.8.0-alpha.1", features = ["tokio", "json", "multipart"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yml = "0.0.12"
reqwest = { version = "0.12.9", features = ["multipart", "json", "stream", "rustls-tls"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "json", "chrono", "mysql"] }
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
image = { version = "0.25.5", features = ["serde", "webp", "png"] }
tiny-skia = { version = "0.11.4" }
imageproc = { version = "0.25.0" }
ab_glyph = { version = "0.2.29", features = ["variable-fonts"] }
jsonwebtoken = "9.3.0"
base64 = "0.22.1"

void_log = { git = "https://gitee.com/orange_union/void_log.git" }
